Take reviews into account
Signed-off-by: Thomas ADAM <tadam@silicom.fr>